--- a/Courses/Seminars/ComComp/index.html
+++ b/Courses/Seminars/ComComp/index.html
@@ -34,6 +34,13 @@ table.sch td.top {
       
 ul { line-height: 13pt; }
 
+.auto-style1 {
+	color: #0000FF;
+}
+.auto-style2 {
+	color: #FF0000;
+}
+
 </style>
 
 
@@ -117,42 +124,45 @@ Sign up to speak
 <li>
    March 15:
 Introduction to 
-        communication complexity.  Reading: [KN] Chapter 1.1
-</li>
+        communication complexity.  Reading: [KN] Chapter 1.1,
+   <span class="auto-style1">Bar Makovitzki</span></li>
 <li>
 March 22:
 Rectangles.  Reading: [KN]  Chapter 1.2.
 
-</li>
+<span class="auto-style1">Ron Shemer</span></li>
 <li>
 March 29:
 Fooling sets and rectangle size.  Rank lower bounds. Reading: [KN] Chapter 
 1.3, 1.4.
-</li>
+<span class="auto-style1">Oshri Shmuel</span></li>
 <li>
-April 19: Decision trees. Reading: [KN] Chapter 4.3, 9.1</li>
+April 19: Decision trees. Reading: [KN] Chapter 4.3, 9.1
+<span class="auto-style1">Itay Friedman</span></li>
 <li>
 May 3:
 Decision trees and data structures II.   Reading: [KN] Chapter 9.2, 9.3
-</li>
+<span class="auto-style1">Itay Ingber</span></li>
 <li>
 May 10:
 Variable Partition Models I.  Reading:  [KN] Chapter 7.1, 7.2.
-<a href="http://www.cs.tau.ac.il/%7Eronitt/COURSES/F09sem/lec6.pdf"> 
-&nbsp;</a></li>
+<span class="auto-style1">Vadim Novgorodov</span></li>
 <li>
 May 17:
 Variable Partition Models II.  Reading:  [KN] Chapter 7.2,7.3.
-</li>
+<span class="auto-style1">Lea Golan</span></li>
 <li>
 May 24:
 Bisection width of networks.   Lower bounds for VLSI.  Reading:  [KN]
-Chapter 8.1,8.3.</li>
+Chapter 8.1,8.3. <span class="auto-style1">Itay Berman</span></li>
 <li>
 May 31:
-Randomization.   Reading: [KN] Chapter 3.1,3.2.</li>
+Randomization.   Reading: [KN] Chapter 3.1,3.2. <span class="auto-style1">
+Imanuel Leibovitch</span></li>
+	<li>
+	June 7 - <span class="auto-style2">No Class</span></li>
 <li>
-June 7:
+June 14:
 The streaming model I. Estimating the number of distinct elements
 in a stream.
 Reading:  Based on Lecture 1 of Piotr Indyk's 
@@ -165,9 +175,9 @@ Spring 2009 course
 </a>
 .
 
-</li>
+<span class="auto-style1">Saar Peer</span></li>
 <li>
-June 14:
+June 21:
 The streaming model II.  Estimating the L2 norm via Alon-Matias-Szegedy.
 Reading:  Based on first 15 slides of Lecture 2.
 of Piotr Indyk's Fall 2007  and Spring 2009 course.
@@ -175,10 +185,9 @@ See also the
 <a href="http://portal.acm.org/citation.cfm?id=237823">
 AMS
 </a>
-paper.
+paper.&nbsp; <span class="auto-style1">Aviad Rubinstein<br></span>
 </li>
-<li>
-June 21:
+	<li>Not this year:
 The streaming model III.   Lower bounds via communication complexity.
 Reading:  
 Henzinger, Raghavan, Rajagopalan, 
