--- a/index.html
+++ b/index.html
@@ -135,13 +135,6 @@ DIV.Section1 {
 
 
 
-.auto-style1 {
-	color: #000000;
-	font-size: small;
-}
-
-
-
 </style>
 
 
@@ -379,7 +372,7 @@ DIV.Section1 {
 
 
 
-<table class="style13" style="width: 71%; height: 201px;" align="center" border="0" cellpadding="8" cellspacing="1">
+<table class="style13" style="width: 71%; height: 201px;" border="0" cellpadding="8" cellspacing="1">
 
     <tbody>
 
@@ -401,6 +394,19 @@ in Reverse Chronological Order</font></h1>
 
 
 <li>
+					<p><span style="font-weight: 400;">
+					<span dir="LTR" class="style14">
+		  		    <span dir="LTR" style="font-weight: 400;">
+					Iftach Haitner </span>
+		  		  and <a href="http://u.cs.biu.ac.il/~omrier/">Eran O<span class="style11">mri</span></a>&nbsp; 
+		  		  and <a href="http://u.cs.biu.ac.il/~zarosih/">Hila Z<span class="style11">arosim</span></a>&nbsp; </span>
+		  </span><br>
+					<span class="style14"><strong><span class="style5">On the 
+					Power of Random Oracles</span><span class="style11">&nbsp;</span><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-CoinFlipping')">Abstract</a><span class="style11">] </span></span></strong><br>
+					<span style="font-weight: 400;">
+					<span dir="LTR" class="style14">Draft of full version
+					<a href="papers/PowerofRO1/MainFile.pdf">[PDF]</a></span></span></span></p>
+		  <li>
 					<p><span dir="LTR"><span class="style14">Itay Berman</span></span><span style="font-weight: 400;"><span dir="LTR" class="style14"><span dir="LTR" style="font-weight: 400;">
 					and Iftach Haitner</span> </span>
 		  </span><br>
@@ -484,19 +490,10 @@ We make progress towards answering the above fundamental question, showing that
 					</li>
 					
 			<div class="box" id="abstract-FDH" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
-					  <h2><span style="font-weight: 400;"> <style type="text/css"> 
-.auto-style1 {
-	font-size: large;
-}
+					  <h2><span style="font-weight: 400;"> <style type="text/css">
+ 
 .auto-style2 {
 	color: #0000FF;
-}
-.auto-style4 {
-	color: #0F0F4B;
-}
-.auto-style5 {
-	color: #000000;
-	font-size: medium;
 }
 .auto-style6 {
 	color: #000000;
@@ -1343,7 +1340,7 @@ that the receiver does not learn any additional information on
 		  <a href="papers/OTDenseTDP/OT_Dense_TCC.pdf">[PDF]</a>
 		  <span style="color: blue;"><br>
 		  </span><span class="style5">Draft of full version</span><span style="color: blue;">
-		  <a href="papers/OTDenseTDP/OTDenseTDP.pdf">[PDF]</a></span></span></span></h2>
+		  <a href="papers/PowerofRO1/MainFile.pdf">[PDF]</a></span></span></span></h2>
 
 
 	  </li></ul>
