--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ DIV.Section1 {
 		<a <font="" href="Courses/FOC/Fall11/index.html" size="2">Foundation of 
 		Cryptography (Fall 11)</a>,
 		<a <font="" href="Courses/Seminars/ComComp/index.html" size="2">Student 
-		seminar on Communication Complexity (Spring 12)</a></span><br></tr>
+		seminar on Communication Complexity (Fall 12)</a></span><br></tr>
  </table>
 
 
