--- a/Courses/Seminars/ComComp/index.html
+++ b/Courses/Seminars/ComComp/index.html
@@ -38,6 +38,13 @@ ul { line-height: 13pt; }
 	color: #007700;
 }
 
+.auto-style4 {
+	color: #0000FF;
+}
+.auto-style5 {
+	color: #00FF00;
+}
+
 </style>
 
 
@@ -121,41 +128,52 @@ practice talk is mandatory,&nbsp; typically given one week before the talk
 	<li>
     Nov 1:
 Introduction to 
-        communication complexity.  <span class="auto-style2">[KN] Chapter 1.1</span></li>
+        communication complexity.  <span class="auto-style2">[KN] Chapter 1.1
+	<a class="Tt" href="https://plus.google.com/u/0/115488104452340031933?prsrc=4" o="115488104452340031933" target="_blank">
+	Elad Cochavi</a></span></li>
 <li>
 Nov 8:
-Rectangles.  <span class="auto-style2">[KN]  Chapter 1.2</span>. </li>
+Rectangles.  <span class="auto-style2">[KN]  Chapter 1.2</span>.&nbsp;
+<span class="auto-style4">Shalev ?</span></li>
 <li>
 Nov 15:
 Fooling sets and rectangle size.  Rank lower bounds. <span class="auto-style2">[KN] Chapter 
-1.3, 1.4. </span></li>
+1.3, 1.4. </span>
+<span class="auto-style4" email="ran.pollak@gmail.com" name="ran pollak">Ran 
+Pollak</span></li>
 	<li>
 	Nov 22: Randomization. Reading. <span class="auto-style2">[KN] Chapter 
-	3.1,3.2</span>.</li>
+	3.1,3.2</span>.&nbsp; <span class="auto-style4">Shay Weiss</span></li>
 <li>
 Nov 29:
 :
 Variable Partition Models. <span class="auto-style2">[KN] Chapter 7.1 -7.3
-</span></li>
+</span>
+<span class="auto-style4" email="danielsolomon94@windowslive.com" name="Daniel Solomon">
+Daniel Solomon</span></li>
 <li>
 Dec 6:
 Bisection width of networks.   Lower bounds for VLSI.&nbsp;
 <span class="auto-style2">[KN]
-Chapter 8.1,8.3. </span></li>
+Chapter 8.1,8.3. </span>
+<span class="auto-style4" email="geugen14@gmail.com" name="Yevgeni Groisman">
+Yevgeni Groisman</span><span class="auto-style2"> </span></li>
 	<li>
 	Dec 13: Decision trees and data structures. Reading: [KN] Chapter 4.3, 9.1 
-	-9.3</li>
+	-9.3
+	<span class="auto-style4" email="amitgoldfarb1994@hotmail.com" name="Amit Goldfarb">
+	Amit Goldfarb</span></li>
 <li>
 Dec 20:
 The streaming model I. Estimating the number of distinct elements
 in a stream.
 Reading:  Based on Lecture 1 of Piotr Indyk's 
 <a href="http://stellar.mit.edu/S/course/6/fa07/6.895/materials.html">
-Fall 2007 course 
+<span class="auto-style5">Fall 2007 course</span> 
 </a> and
 the first lecture of his
 <a href="http://people.csail.mit.edu/indyk/Rice/">
-Spring 2009 course
+<span class="auto-style5">Spring 2009 course</span>
 </a>
 .
 
@@ -167,15 +185,17 @@ Reading:  Based on first 15 slides of Lecture 2.
 of Piotr Indyk's Fall 2007  and Spring 2009 course.
 See also the 
 <a href="http://portal.acm.org/citation.cfm?id=237823">
-AMS
+<span class="auto-style5">AMS</span>
 </a>
 paper.&nbsp; 
 </li>
 	<li>Jan 3: The streaming model III.   Lower bounds via communication complexity.
 Reading:  
-Henzinger, Raghavan, Rajagopalan,
-	<a href="http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.90.7290">"Computing on data streams"</a>.
-</li>
+Henzinger, Raghavan, Rajagopalan,<span class="auto-style4"> </span>
+	<a href="http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.90.7290">
+	<span class="auto-style5">"Computing on data streams"</span></a>.&nbsp;
+	<span class="auto-style4" email="deandoron@mail.tau.ac.il" name="Dean Doron">
+	Dean Doron</span></li>
 	<li>Jan 10:?</li>
 	<li>Jan 17:? </li>
 </ol>
