--- a/Courses/Seminars/ComComp/index.html
+++ b/Courses/Seminars/ComComp/index.html
@@ -45,6 +45,10 @@ ul { line-height: 13pt; }
 	color: #00FF00;
 }
 
+.auto-style6 {
+	color: #FF0000;
+}
+
 </style>
 
 
@@ -177,6 +181,8 @@ the first lecture of his
 </a>
 .
 
+<span class="auto-style4" email="deandoron@mail.tau.ac.il" name="Dean Doron">
+Idan Shabat</span> 
 </li>
 <li>
 Dec 27:
@@ -187,17 +193,16 @@ See also the
 <a href="http://portal.acm.org/citation.cfm?id=237823">
 <span class="auto-style5">AMS</span>
 </a>
-paper.&nbsp; 
+paper.&nbsp;<span class="auto-style4" email="deandoron@mail.tau.ac.il" name="Dean Doron">Dean Doron</span> 
 </li>
 	<li>Jan 3: The streaming model III.   Lower bounds via communication complexity.
 Reading:  
 Henzinger, Raghavan, Rajagopalan,<span class="auto-style4"> </span>
 	<a href="http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.90.7290">
 	<span class="auto-style5">"Computing on data streams"</span></a>.&nbsp;
-	<span class="auto-style4" email="deandoron@mail.tau.ac.il" name="Dean Doron">
-	Dean Doron</span></li>
-	<li>Jan 10:?</li>
-	<li>Jan 17:? </li>
+	<span class="auto-style6">?</span></li>
+	<li>Jan 10:<span class="auto-style6">?</span></li>
+	<li>Jan 17:<span class="auto-style6">?</span></li>
 </ol>
 <p>&nbsp;</p>
 
