--- a/Courses/Seminars/ComComp/index.html
+++ b/Courses/Seminars/ComComp/index.html
@@ -200,7 +200,7 @@ Reading:
 Henzinger, Raghavan, Rajagopalan,<span class="auto-style4"> </span>
 	<a href="http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.90.7290">
 	<span class="auto-style5">"Computing on data streams"</span></a>.&nbsp;
-	<span class="auto-style6">?</span></li>
+	<span class="auto-style4">Rom Carmel</span></li>
 	<li>Jan 10:<span class="auto-style6">?</span></li>
 	<li>Jan 17:<span class="auto-style6">?</span></li>
 </ol>
