--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ in Reverse Chronological Order</font></h1>
 		  		  and <a href="http://u.cs.biu.ac.il/~zarosih/">Hila Z<span class="style11">arosim</span></a>&nbsp; </span>
 		  </span><br>
 					<span class="style14"><strong><span class="style5">On the 
-					Power of Random Oracles</span><span class="style11">&nbsp;</span><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-PowerofRO1')">Abstract</a><span class="style11">] </span></span></strong><br>
+					Power of Random Oracles</span><span class="style11">&nbsp;</span><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-PowerofRO1')">Abstract</a><span class="style11">] <img height="11" src="new.gif" width="28"></span></span></strong><br>
 					<span style="font-weight: 400;">
 					<span dir="LTR" class="style14">Draft of full version
 					<a href="papers/PowerofRO1/MainFile.pdf">[PDF]</a></span></span></span></p>
@@ -472,7 +472,7 @@ reduced to the existence of one-way functions.
 					<p><span dir="LTR"><span class="style14">Itay Berman</span></span><span style="font-weight: 400;"><span dir="LTR" class="style14"><span dir="LTR" style="font-weight: 400;">
 					and Iftach Haitner</span> </span>
 		  </span><br>
-					<strong>From Non-Adaptive to Adaptive Pseudorandom Functions</strong><span class="style14"><strong><span class="style11">&nbsp;</span><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-adaptivePRF')">Abstract</a><span class="style11">]</span><span dir="LTR" class="style14">&nbsp;</span></span></strong><img height="11" src="new.gif" width="28"><br>
+					<strong>From Non-Adaptive to Adaptive Pseudorandom Functions</strong><span class="style14"><strong><span class="style11">&nbsp;</span><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-adaptivePRF')">Abstract</a><span class="style11">]</span><span dir="LTR" class="style14">&nbsp;</span></span></strong><br>
 					TCC 2012 <span style="font-weight: 400;">
 					<span dir="LTR" class="style14">
 					<a href="papers/AdaptivePRF/AdaptivePRF.pdf">[PDF]</a></span></span></span></p>
@@ -1223,7 +1223,7 @@ that the receiver does not learn any additional information on
 		  <a href="http://www.wisdom.weizmann.ac.il/%7Eharnik/">
 		  <span style="" lang="EN-US">Danny Harnik</span></a></span> and
 				<span style="" lang="DE">
-		  <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold/">
+		  <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold/"><a name="RandIt"></a>
 		  <span style="" lang="EN-US">Omer Reingold</span></a></span></span><span style="font-weight: 400;"><br>
 		  <span dir="LTR"><b>On the Power of the Randomized Iterate</b> [<a href="javascript:toggle('abstract-RI')">Abstract</a>]
 				<span style="color: blue;">[</span><a href="papers/RandomizedIteate/Randomized_Iterate.pps">Slides</a><span style="color: blue;">]</span></span></span><br>
@@ -1297,7 +1297,11 @@ that the receiver does not learn any additional information on
 		  </span><span class="style14">Programming - ICALP, 2006
 		  <span dir="LTR" style="font-weight: 400">
 					<a href="papers/RandomizedIteate/PrgFromHard-ICALP.pdf">[PDF]</a>
-		  </span></span></h2>
+		  <br><span style="font-weight: 400;"> 
+		  <o:p><span class="style5">Full version is part of </span>
+		  <span class="style11">
+		  <a href="papers/HNORV/HNORV-sicomp.pdf">[</a><span style="color: blue;"><a href="#RandIt">On 
+		  the Power of the Randomized Iterate</a>]</span></span></o:p></span></span></span></h2>
 		  <div class="box" id="abstract-PRGfromExp" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 			  <h2><span style="font-weight: 400;">We show a construction of
 					a pseudorandom generator from any exponentially hard one-way
