--- a/index.html
+++ b/index.html
@@ -398,7 +398,11 @@ in Reverse Chronological Order</font></h1>
 					and&nbsp; Moni Naor<br>
 					<strong>Hardness Preserving Reductions via Cuckoo Hashing </strong>
 					<span class="style14"><strong><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-Cuckoo')">Abstract</a><span class="style11">]</span><span dir="LTR" class="style14">&nbsp;<span class="style11"><img height="11" src="new.gif" width="28"></span></span></span></strong><br>
-					TCC 2013 </span></p>
+					TCC 2013 <span style="font-weight: 400;"> 
+					<span dir="LTR" class="style14">
+					<a href="papers/Cuckoo/Cuckoo_TCC.pdf">[PDF]</a></span></span></span><br><span style="font-weight: 400;"> 
+					<span class="style14"><span dir="LTR" class="style14">Draft of full version</span> <span dir="LTR" class="style14">
+					<span class="style11">[</span><a href="papers/Cuckoo/Cuckoo%20.pdf">PDF</a><strong><span class="style11">]</span></strong></span></span></span></p>
 
 <div class="box" id="abstract-Cuckoo" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 A common method for increasing the usability and uplifting the security of 
