--- a/index.html
+++ b/index.html
@@ -442,8 +442,9 @@ adaptive PRFs.
 		  </span><br><strong><span class="style5">Limits on the Usefulness of 
 					Random Oracles</span><span class="style14"><span class="style11">&nbsp;</span><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-PowerofRO1')">Abstract</a><span class="style11">] 
 					</span></span></span></strong><span class="style14"><br><span style="font-weight: 400;">
-					<span dir="LTR" class="style14">TCC 2013<br>Draft of full version
-					<a href="papers/PowerofRO1/MainFile.pdf">[PDF]</a></span></span></span></p>
+					<span dir="LTR" class="style14">TCC 2013
+					<span class="style11">[</span><a href="papers/PowerofRO1/PowerOfRO_TCC.pdf">PDF</a><strong><span class="style11">]</span></strong><br>Draft of full version
+					<a href="papers/PowerofRO1/PowerOfRO.pdf">[PDF]</a></span></span></span></p>
 		
 
 <div class="box" id="abstract-PowerofRO1" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
